# modern-cmake-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benches/: BenchSimple.cpp  CMakeLists.txt
examples/: CMakeLists.txt  Print.cpp
include/Demo/: Demo.h
src/: Demo.cpp
tests/: CMakeLists.txt  TestSimple.cpp
